@@ -1,3 +1,9 @@
+2008-11-03  Chris Buccella  <buccella@linux.vnet.ibm.com>
+
+	* objectImpl.c:
+	Fixed [ 2210462 ] Memory Corruption in CMSetProperty()
+	(patch by Mike Brasher)
+
 2008-11-03 Sean Swehla  <smswehla@linux.vnet.ibm.com>
 
 	* msgqueue.c:
